@@ -1,4 +1,5 @@
 * Tue Apr 18 2012 Shane Bradley <sbradley@redhat.com>- 2.11-0.0
+- Added support for multiple clusters detection.
 - Display location of directory that contains non-report files.
 * Tue Apr 17 2012 Shane Bradley <sbradley@redhat.com>- 2.10-0.0
 - Fix sorting issue with cluster nodes if cluster node count was greater than 9.
